# rngs

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: benches.yml  test.yml
benches/: Cargo.toml  mod.rs
rand_chacha/: CHANGELOG.md  Cargo.toml
rand_chacha/src/: chacha.rs
rand_hc/: CHANGELOG.md  Cargo.toml
rand_hc/src/: hc128.rs
rand_isaac/: CHANGELOG.md  Cargo.toml
rand_isaac/src/: isaac.rs  isaac64.rs
rand_jitter/: CHANGELOG.md  Cargo.toml
rand_jitter/src/: lib.rs
rand_jitter/tests/: mod.rs
rand_pcg/: CHANGELOG.md  Cargo.toml
rand_sfc/: CHANGELOG.md  Cargo.toml
rand_sfc/src/: sfc32.rs  sfc64.rs
rand_xorshift/: CHANGELOG.md  Cargo.toml
rand_xorshift/src/: lib.rs
rand_xorshift/tests/: mod.rs
rand_xoshiro/: CHANGELOG.md  Cargo.toml
rand_xoshiro/src/: lib.rs  splitmix64.rs  xoroshiro128plus.rs  xoroshiro128plusplus.rs  xoroshiro128starstar.rs  xoroshiro64star.rs  xoroshiro64starstar.rs  xoshiro128plus.rs  xoshiro128plusplus.rs  xoshiro128starstar.rs  xoshiro256plus.rs  xoshiro256plusplus.rs  xoshiro256starstar.rs  xoshiro512plus.rs  xoshiro512plusplus.rs  xoshiro512starstar.rs
rand_xoshiro/tests/: serde.rs
