[workspace]
resolver = "3"
members = [
    "rand_chacha",
    "rand_hc",
    "rand_isaac",
    "rand_jitter",
    "rand_pcg",
    "rand_sfc",
    "rand_xorshift",
    "rand_xoshiro",
]
exclude = [
    "benches",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
rand_core = "0.10.0"
ppv-lite86 = { version = "0.2.21", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_arrays = "0.2.0"
serde_json = "1.0.149"
getrandom = "0.4.1"
log = "0.4.29"
libc = { version = "0.2", default-features = false }
winapi = "0.3"
postcard = { version = "1.1.3", default-features = false }
