[package]
name = "rand_chacha"
version = "0.10.0"
authors = ["The Rand Project Developers", "The Rust Project Developers", "The CryptoCorrosion Contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_chacha"
homepage = "https://rust-random.github.io/book"
description = """
ChaCha random number generator
"""
keywords = ["random", "rng", "chacha"]
categories = ["algorithms", "no-std"]
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
rand_core = { workspace = true }
ppv-lite86 = { workspace = true, features = ["simd"] }
serde = { workspace = true, default-features = true, features = ["derive"], optional = true }

[dev-dependencies]
# Only to test serde
serde_json = { workspace = true }
getrandom = { workspace = true, features = ["sys_rng"] }

[features]
default = ["std"]
std = ["ppv-lite86/std"]
serde = ["dep:serde"]
