[package]
name = "rand_pcg"
version = "0.10.1"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rngs"
documentation = "https://docs.rs/rand_pcg"
homepage = "https://rust-random.github.io/book"
description = "Selected PCG random number generators"
keywords = ["random", "rng", "pcg"]
categories = ["algorithms", "no-std"]
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
serde = ["dep:serde"]

[dependencies]
rand_core = { workspace = true }
serde = { workspace = true, default-features = true, features = ["derive"], optional = true }

[dev-dependencies]
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
postcard = { workspace = true, features = ["alloc"] }
