[package]
name = "rand_sfc"
version = "0.2.0"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-random/rngs"
documentation = "https://docs.rs/rand_sfc"
homepage = "https://rust-random.github.io/book"
description = "Sfc32 and Sfc64 random number generators"
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
serde = ["dep:serde"]

[dependencies]
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
